# BeatFlow

./: .env  .env.example  .gitignore  README.md  deploy.sh  gunicorn.conf.py  index.html  musicstagram.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  vite.config.js
.github/workflows/: deploy.yml
backend/: package.json  server.js
backend/middleware/: auth.js
backend/models/: Beat.js  User.js
backend/routes/: beats.js  users.js
backend/src/: server.js
config/: supabase.py  supabase_client.py  webpack.config.js
frontend/: .env.example  .eslintrc.json  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend-backup/: index.html  package-lock.json  package.json  vite.config.js
frontend-backup/src/: App.jsx  theme.js
frontend-old/: index.html  package-lock.json  package.json  vite.config.js
instance/: musicstagram.db
logs/: musicstagram.log.1  musicstagram.log.10  musicstagram.log.2  musicstagram.log.3  musicstagram.log.4  musicstagram.log.5  musicstagram.log.6  musicstagram.log.7  musicstagram.log.8  musicstagram.log.9
public/: 404.html  index.html
scripts/: build.py  generate_sw.py  init_auth.py  init_storage.py  init_supabase.py  run_migrations.py  test_db.py  test_supabase.py
src/: App.jsx  index.js  main.jsx
static/: manifest.json  sw.js
templates/: 404.html  500.html  base.html  index.html  login.html  new_post.html  offline.html  profile.html  search.html  signup.html  synth.html  welcome.html
wasm/: Cargo.toml
wasm/src/: lib.rs
(+94 files in other folders)
