[package]
name = "beatflow-wasm"
version = "0.1.0"
edition = "2021"
authors = ["AIEmpireHQ"]
description = "WebAssembly audio processing for BeatFlow"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "AudioDestinationNode",
    "AudioParam",
    "GainNode",
    "OscillatorNode",
    "AnalyserNode",
    "Performance",
    "Window",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "MouseEvent",
    "AddEventListenerOptions",
    "EventTarget"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
